--- a/src/style/topBar.scss
+++ b/src/style/topBar.scss
@@ -6,7 +6,7 @@
   top: 0;
   border-bottom: 1px solid var(--split-line);
   background-color: var(--sidebar);
-  z-index: 7;
+  z-index: 8;
   -webkit-box-shadow: inset 0px -11px 25px 0px rgba(0, 0, 0, 0.0625);
   box-shadow: inset 0px -11px 25px 0px rgba(0, 0, 0, 0.0625);
   > * {
